dark mode and new js for it

--- a/WebApp/Views/Shared/Sections/Home/_Not-found-404.cshtml
+++ b/WebApp/Views/Shared/Sections/Home/_Not-found-404.cshtml
@@ -6,10 +6,8 @@
 
 <section id="not-found">
     <div class="container">
-        <a href="/" id="notFoundId" class="notfound-image">
-            
-        </a>
-        <div class="not-found-content">
+        <a href="/" id="notFoundId" class="notfound-image"></a>          
+            <div class="not-found-content">
             <h1 class="h1">@Model.NotFound.Title</h1>
             <p class="gray-700">@Model.NotFound.Description</p>
         </div>
