--- a/WebApp/wwwroot/css/scss/sections/_account-security.scss
+++ b/WebApp/wwwroot/css/scss/sections/_account-security.scss
@@ -150,12 +150,13 @@
                         span {
 
                             &.field-validation-error {
-                                color: $danger;
                                 font-weight: 500;
                                 opacity: 0.7;
                                 position: absolute;
                                 top: 0;
                                 right: 0;
+                                @include text-s;
+                                color: $danger !important;
                             }
                         }
 
@@ -424,12 +425,13 @@
                             span {
 
                                 &.field-validation-error {
-                                    color: $danger;
                                     font-weight: 500;
                                     opacity: 0.7;
                                     position: absolute;
                                     top: 0;
                                     right: 0;
+                                    @include text-s;
+                                    color: $danger !important;
                                 }
                             }
 
@@ -505,7 +507,7 @@
                         }
 
                         .deletebox-group {
-                           
+
 
                             .checkbox-error {
                                 color: $danger;
