--- a/WebApp/wwwroot/css/scss/sections/_subscribe.scss
+++ b/WebApp/wwwroot/css/scss/sections/_subscribe.scss
@@ -11,8 +11,6 @@
                 display: flex;
                 justify-content: center;
                 gap: 2rem;
-
-           
             }
 
             .newsletter {
@@ -26,13 +24,9 @@
                     padding-right: 3rem;
                     max-width: 11rem;
                     margin: 0;
-
-
-
                 }
 
                 .checkboxes {
-
                     display: grid;
                     grid-template-columns: repeat(2, 1fr);
                     margin-right: 1rem;
@@ -50,11 +44,9 @@
 
                     input {
                         height: 100%;
-
                     }
 
                     p {
-
                         margin: 0;
                         margin-right: 1rem;
                     }
@@ -72,38 +64,60 @@
                 .input-terms {
                     width: 43%;
                     margin-right: 1rem;
+                    position: relative;
 
-
-
-
-                    input {
-                        width: 100%;
-                        border-radius: .3rem;
-                        border-color: $gray-500;
-                        opacity: 0.5;
-                        position: relative;
-                        padding-left: 2rem;
-
+                    i {
+                        position: absolute;
+                        top: .45rem;
+                        left: .7rem;
+                        font-size: 1rem;
+                        color: $gray-900;
                     }
+
+
+                    .input-group {
+
+                        span {
+
+                            &.field-validation-error {
+                                color: $danger;
+                                font-weight: 500;
+                                opacity: 0.7;
+                                position: absolute;
+                                top: -1.5rem;
+                                right: 0;
+                                @include text-s;
+                                color: $danger !important;
+                            }
+                        }
+
+                        input {
+                            width: 100%;
+                            border-radius: .3rem;
+                            border-color: $gray-500;
+                            background-color: #F3F6FF;
+                            opacity: 0.5;
+                            padding-left: 2rem;
+                            color: $gray-900;
+
+                            &.input-validation-error {
+                                border-color: $danger;
+                            }
+                        }
+                    }
+
 
                     p {
                         margin: 0;
                         padding-top: .5rem;
                     }
-
-
                 }
 
 
                 button {
                     height: 2rem;
-
                 }
             }
-
-
-
-
         }
     }
 }
@@ -156,12 +170,13 @@
 
                         .checkbox {
                             display: flex;
-                            gap: .5rem;                            
+                            gap: .5rem;
                             background-color: $gray-900;
                         }
 
                         input {
-                            height: 100%;                          
+                            height: 100%;
+                            color: $gray-300;
                         }
 
                         p {
@@ -183,22 +198,51 @@
                     .input-terms {
                         width: 43%;
                         margin-right: 1rem;
+                        position: relative;
 
-
-
-
-                        input {
-                            width: 100%;
-                            border-radius: .3rem;
-                            border-color: $gray-500;
-                            opacity: 0.5;
-                            position: relative;
-                            padding-left: 2rem;
+                        i {
+                            position: absolute;
+                            top: .45rem;
+                            left: .7rem;
+                            font-size: 1rem;
+                            color: $gray-300;
                         }
+
+                        .input-group {
+
+                            span {
+
+                                &.field-validation-error {
+                                    font-weight: 500;
+                                    opacity: 0.7;
+                                    position: absolute;
+                                    top: -1.5rem;
+                                    right: 0;
+                                    @include text-s;
+                                    color: $danger !important;
+                                }
+                            }
+
+                            input {
+                                width: 100%;
+                                border-radius: .3rem;
+                                border-color: $gray-500;
+                                background-color: $gray-900;
+                                opacity: 0.5;
+                                padding-left: 2rem;
+                                color: white;
+
+                                &.input-validation-error {
+                                    border-color: $danger;
+                                }
+                            }
+                        }
+
 
                         p {
                             margin: 0;
                             padding-top: .5rem;
+                            color: $gray-500;
                         }
                     }
 
