--- a/WebApp/wwwroot/css/site.css
+++ b/WebApp/wwwroot/css/site.css
@@ -1457,14 +1457,40 @@ footer .container .social-media a:hover {
 #subscribe .section-subscribe .container .subscribe-form .input-terms {
   width: 43%;
   margin-right: 1rem;
+  position: relative;
 }
-#subscribe .section-subscribe .container .subscribe-form .input-terms input {
+#subscribe .section-subscribe .container .subscribe-form .input-terms i {
+  position: absolute;
+  top: 0.45rem;
+  left: 0.7rem;
+  font-size: 1rem;
+  color: #0B0F19;
+}
+#subscribe .section-subscribe .container .subscribe-form .input-terms .input-group span.field-validation-error {
+  color: #EF4444;
+  font-weight: 500;
+  opacity: 0.7;
+  position: absolute;
+  top: -1.5rem;
+  right: 0;
+  line-height: 160%;
+  font-weight: 400;
+  color: #565973;
+  font-family: "Manrope", sans-serif;
+  font-size: 14px !important;
+  color: #EF4444 !important;
+}
+#subscribe .section-subscribe .container .subscribe-form .input-terms .input-group input {
   width: 100%;
   border-radius: 0.3rem;
   border-color: #B4B7C9;
+  background-color: #F3F6FF;
   opacity: 0.5;
-  position: relative;
   padding-left: 2rem;
+  color: #0B0F19;
+}
+#subscribe .section-subscribe .container .subscribe-form .input-terms .input-group input.input-validation-error {
+  border-color: #EF4444;
 }
 #subscribe .section-subscribe .container .subscribe-form .input-terms p {
   margin: 0;
@@ -1517,6 +1543,7 @@ footer .container .social-media a:hover {
 }
 .dark-mode #subscribe .section-subscribe .container .newsletter .checkboxes input {
   height: 100%;
+  color: #E2E5F1;
 }
 .dark-mode #subscribe .section-subscribe .container .newsletter .checkboxes p {
   margin: 0;
@@ -1530,18 +1557,44 @@ footer .container .social-media a:hover {
 .dark-mode #subscribe .section-subscribe .container .subscribe-form .input-terms {
   width: 43%;
   margin-right: 1rem;
+  position: relative;
 }
-.dark-mode #subscribe .section-subscribe .container .subscribe-form .input-terms input {
+.dark-mode #subscribe .section-subscribe .container .subscribe-form .input-terms i {
+  position: absolute;
+  top: 0.45rem;
+  left: 0.7rem;
+  font-size: 1rem;
+  color: #E2E5F1;
+}
+.dark-mode #subscribe .section-subscribe .container .subscribe-form .input-terms .input-group span.field-validation-error {
+  font-weight: 500;
+  opacity: 0.7;
+  position: absolute;
+  top: -1.5rem;
+  right: 0;
+  line-height: 160%;
+  font-weight: 400;
+  color: #565973;
+  font-family: "Manrope", sans-serif;
+  font-size: 14px !important;
+  color: #EF4444 !important;
+}
+.dark-mode #subscribe .section-subscribe .container .subscribe-form .input-terms .input-group input {
   width: 100%;
   border-radius: 0.3rem;
   border-color: #B4B7C9;
+  background-color: #0B0F19;
   opacity: 0.5;
-  position: relative;
   padding-left: 2rem;
+  color: white;
+}
+.dark-mode #subscribe .section-subscribe .container .subscribe-form .input-terms .input-group input.input-validation-error {
+  border-color: #EF4444;
 }
 .dark-mode #subscribe .section-subscribe .container .subscribe-form .input-terms p {
   margin: 0;
   padding-top: 0.5rem;
+  color: #B4B7C9;
 }
 .dark-mode #subscribe .section-subscribe .container .subscribe-form button {
   height: 2rem;
@@ -2727,12 +2780,17 @@ footer .container .social-media a:hover {
   font-weight: 400;
 }
 .dark-mode #account .container .account-details .basic .basic-content .basic-group span.field-validation-error {
-  color: #EF4444;
   font-weight: 500;
   opacity: 0.7;
   position: absolute;
   top: 0;
   right: 0;
+  line-height: 160%;
+  font-weight: 400;
+  color: #565973;
+  font-family: "Manrope", sans-serif;
+  font-size: 14px !important;
+  color: #EF4444 !important;
 }
 .dark-mode #account .container .account-details .basic .basic-content .basic-group input {
   border: 1px solid #D4D7E5;
@@ -2798,12 +2856,17 @@ footer .container .social-media a:hover {
   font-weight: 700;
 }
 .dark-mode #account .container .account-details .address .address-content .address-group span.field-validation-error {
-  color: #EF4444;
   font-weight: 500;
   opacity: 0.7;
   position: absolute;
   top: 0;
   right: 0;
+  line-height: 160%;
+  font-weight: 400;
+  color: #565973;
+  font-family: "Manrope", sans-serif;
+  font-size: 14px !important;
+  color: #EF4444 !important;
 }
 .dark-mode #account .container .account-details .address .address-content .address-group input {
   border: 1px solid #D4D7E5;
@@ -2959,12 +3022,17 @@ footer .container .social-media a:hover {
   font-weight: 700;
 }
 #security .container .account-security .security .security-content .security-group span.field-validation-error {
-  color: #EF4444;
   font-weight: 500;
   opacity: 0.7;
   position: absolute;
   top: 0;
   right: 0;
+  line-height: 160%;
+  font-weight: 400;
+  color: #565973;
+  font-family: "Manrope", sans-serif;
+  font-size: 14px !important;
+  color: #EF4444 !important;
 }
 #security .container .account-security .security .security-content .security-group input {
   border: 1px solid #D4D7E5;
@@ -3162,12 +3230,17 @@ footer .container .social-media a:hover {
   font-weight: 700;
 }
 .dark-mode #security .container .account-security .security .security-content .security-group span.field-validation-error {
-  color: #EF4444;
   font-weight: 500;
   opacity: 0.7;
   position: absolute;
   top: 0;
   right: 0;
+  line-height: 160%;
+  font-weight: 400;
+  color: #565973;
+  font-family: "Manrope", sans-serif;
+  font-size: 14px !important;
+  color: #EF4444 !important;
 }
 .dark-mode #security .container .account-security .security .security-content .security-group input {
   border: 1px solid #D4D7E5;
