--- a/WebApp/Views/Shared/Sections/Account/_Account-details.cshtml
+++ b/WebApp/Views/Shared/Sections/Account/_Account-details.cshtml
@@ -35,7 +35,7 @@
 						}
 						else
 						{
-							<input asp-for="AccountBasic.FirstName" disabled />
+							<input asp-for="AccountBasic.FirstName" />
 							<span asp-validation-for="AccountBasic.FirstName"></span>
 						}			
 					</div>
@@ -47,7 +47,7 @@
 						}
 						else
 						{
-							<input asp-for="AccountBasic.LastName" disabled />
+							<input asp-for="AccountBasic.LastName" />
 							<span asp-validation-for="AccountBasic.LastName"></span>
 						}
 					</div>
@@ -59,7 +59,7 @@
 						}
 						else
 						{
-							<input asp-for="AccountBasic.Email" disabled />
+							<input asp-for="AccountBasic.Email" />
 							<span asp-validation-for="AccountBasic.Email"></span>
 						}
 					</div>
