--- a/WebApp/wwwroot/css/scss/core/_base.scss
+++ b/WebApp/wwwroot/css/scss/core/_base.scss
@@ -1,3 +1,10 @@
+body {
+    color-scheme: light;
+}
+body.dark-mode {
+    color-scheme: dark;
+}
+
 html, body {
     @include standard-text;
     font-size: 16px; 
