--- a/WebApp/wwwroot/css/scss/sections/_account-security.scss
+++ b/WebApp/wwwroot/css/scss/sections/_account-security.scss
@@ -140,23 +140,25 @@
                     gap: .5rem;
 
 
+
                     .security-group {
-                        position: relative;
                         display: flex;
                         flex-direction: column;
                         color: $gray-900;
                         font-weight: 700;
+                        position: relative;
 
                         span {
 
                             &.field-validation-error {
+                                @include text-s;
                                 font-weight: 500;
                                 opacity: 0.7;
                                 position: absolute;
                                 top: 0;
                                 right: 0;
-                                @include text-s;
                                 color: $danger !important;
+
                             }
                         }
 
@@ -428,7 +430,7 @@
                                     font-weight: 500;
                                     opacity: 0.7;
                                     position: absolute;
-                                    top: 0;
+                                    top: 4rem;
                                     right: 0;
                                     @include text-s;
                                     color: $danger !important;
