--- a/WebApp/wwwroot/css/site.css
+++ b/WebApp/wwwroot/css/site.css
@@ -1,4 +1,12 @@
 ﻿@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap");
+body {
+  color-scheme: light;
+}
+
+body.dark-mode {
+  color-scheme: dark;
+}
+
 html, body {
   line-height: 160%;
   font-weight: 400;
@@ -1446,27 +1454,28 @@ footer .container .social-media a:hover {
 #subscribe .section-subscribe .container .newsletter .checkboxes input {
   height: 100%;
 }
-#subscribe .section-subscribe .container .newsletter .checkboxes p {
+#subscribe .section-subscribe .container .newsletter .checkboxes label {
   margin: 0;
   margin-right: 1rem;
 }
-#subscribe .section-subscribe .container .subscribe-form {
+#subscribe .section-subscribe .container .newsletter .subscribe-form {
   display: flex;
   justify-content: center;
 }
-#subscribe .section-subscribe .container .subscribe-form .input-terms {
-  width: 43%;
+#subscribe .section-subscribe .container .newsletter .subscribe-form .input-terms {
+  width: 100%;
   margin-right: 1rem;
   position: relative;
+  margin-top: 1rem;
 }
-#subscribe .section-subscribe .container .subscribe-form .input-terms i {
+#subscribe .section-subscribe .container .newsletter .subscribe-form .input-terms i {
   position: absolute;
   top: 0.45rem;
   left: 0.7rem;
   font-size: 1rem;
   color: #0B0F19;
 }
-#subscribe .section-subscribe .container .subscribe-form .input-terms .input-group span.field-validation-error {
+#subscribe .section-subscribe .container .newsletter .subscribe-form .input-terms .input-group span.field-validation-error {
   color: #EF4444;
   font-weight: 500;
   opacity: 0.7;
@@ -1480,7 +1489,7 @@ footer .container .social-media a:hover {
   font-size: 14px !important;
   color: #EF4444 !important;
 }
-#subscribe .section-subscribe .container .subscribe-form .input-terms .input-group input {
+#subscribe .section-subscribe .container .newsletter .subscribe-form .input-terms .input-group input {
   width: 100%;
   border-radius: 0.3rem;
   border-color: #B4B7C9;
@@ -1489,15 +1498,16 @@ footer .container .social-media a:hover {
   padding-left: 2rem;
   color: #0B0F19;
 }
-#subscribe .section-subscribe .container .subscribe-form .input-terms .input-group input.input-validation-error {
+#subscribe .section-subscribe .container .newsletter .subscribe-form .input-terms .input-group input.input-validation-error {
   border-color: #EF4444;
 }
-#subscribe .section-subscribe .container .subscribe-form .input-terms p {
+#subscribe .section-subscribe .container .newsletter .subscribe-form .input-terms p {
   margin: 0;
   padding-top: 0.5rem;
 }
-#subscribe .section-subscribe .container .subscribe-form button {
+#subscribe .section-subscribe .container .newsletter .subscribe-form button {
   height: 2rem;
+  margin-top: 1rem;
 }
 
 .dark-mode #subscribe {
@@ -1545,28 +1555,29 @@ footer .container .social-media a:hover {
   height: 100%;
   color: #E2E5F1;
 }
-.dark-mode #subscribe .section-subscribe .container .newsletter .checkboxes p {
+.dark-mode #subscribe .section-subscribe .container .newsletter .checkboxes label {
   margin: 0;
   margin-right: 1rem;
   color: #B4B7C9;
 }
-.dark-mode #subscribe .section-subscribe .container .subscribe-form {
+.dark-mode #subscribe .section-subscribe .container .newsletter .subscribe-form {
   display: flex;
   justify-content: center;
 }
-.dark-mode #subscribe .section-subscribe .container .subscribe-form .input-terms {
-  width: 43%;
+.dark-mode #subscribe .section-subscribe .container .newsletter .subscribe-form .input-terms {
+  width: 100%;
   margin-right: 1rem;
   position: relative;
+  margin-top: 1rem;
 }
-.dark-mode #subscribe .section-subscribe .container .subscribe-form .input-terms i {
+.dark-mode #subscribe .section-subscribe .container .newsletter .subscribe-form .input-terms i {
   position: absolute;
   top: 0.45rem;
   left: 0.7rem;
   font-size: 1rem;
   color: #E2E5F1;
 }
-.dark-mode #subscribe .section-subscribe .container .subscribe-form .input-terms .input-group span.field-validation-error {
+.dark-mode #subscribe .section-subscribe .container .newsletter .subscribe-form .input-terms .input-group span.field-validation-error {
   font-weight: 500;
   opacity: 0.7;
   position: absolute;
@@ -1579,7 +1590,7 @@ footer .container .social-media a:hover {
   font-size: 14px !important;
   color: #EF4444 !important;
 }
-.dark-mode #subscribe .section-subscribe .container .subscribe-form .input-terms .input-group input {
+.dark-mode #subscribe .section-subscribe .container .newsletter .subscribe-form .input-terms .input-group input {
   width: 100%;
   border-radius: 0.3rem;
   border-color: #B4B7C9;
@@ -1588,16 +1599,17 @@ footer .container .social-media a:hover {
   padding-left: 2rem;
   color: white;
 }
-.dark-mode #subscribe .section-subscribe .container .subscribe-form .input-terms .input-group input.input-validation-error {
+.dark-mode #subscribe .section-subscribe .container .newsletter .subscribe-form .input-terms .input-group input.input-validation-error {
   border-color: #EF4444;
 }
-.dark-mode #subscribe .section-subscribe .container .subscribe-form .input-terms p {
+.dark-mode #subscribe .section-subscribe .container .newsletter .subscribe-form .input-terms p {
   margin: 0;
   padding-top: 0.5rem;
   color: #B4B7C9;
 }
-.dark-mode #subscribe .section-subscribe .container .subscribe-form button {
+.dark-mode #subscribe .section-subscribe .container .newsletter .subscribe-form button {
   height: 2rem;
+  margin-top: 1rem;
 }
 
 #signup {
@@ -2745,9 +2757,6 @@ footer .container .social-media a:hover {
 .dark-mode #account .container .account-details label {
   color: #E2E5F1;
 }
-.dark-mode #account .container .account-details input {
-  color: #0B0F19;
-}
 .dark-mode #account .container .account-details .basic h3 {
   color: #6366F1;
 }
@@ -3015,23 +3024,23 @@ footer .container .social-media a:hover {
   gap: 0.5rem;
 }
 #security .container .account-security .security .security-content .security-group {
-  position: relative;
   display: flex;
   flex-direction: column;
   color: #0B0F19;
   font-weight: 700;
+  position: relative;
 }
 #security .container .account-security .security .security-content .security-group span.field-validation-error {
-  font-weight: 500;
-  opacity: 0.7;
-  position: absolute;
-  top: 0;
-  right: 0;
   line-height: 160%;
   font-weight: 400;
   color: #565973;
   font-family: "Manrope", sans-serif;
   font-size: 14px !important;
+  font-weight: 500;
+  opacity: 0.7;
+  position: absolute;
+  top: 0;
+  right: 0;
   color: #EF4444 !important;
 }
 #security .container .account-security .security .security-content .security-group input {
@@ -3233,7 +3242,7 @@ footer .container .social-media a:hover {
   font-weight: 500;
   opacity: 0.7;
   position: absolute;
-  top: 0;
+  top: 4rem;
   right: 0;
   line-height: 160%;
   font-weight: 400;
