Courses html and scss

--- a/WebApp/Views/Shared/Sections/Course/_AllCourses.cshtml
+++ b/WebApp/Views/Shared/Sections/Course/_AllCourses.cshtml
@@ -10,7 +10,7 @@
         <div class="nav-links">
             <a class="home" asp-controller="Home" asp-action="Index"><i class="fa-light fa-house"></i>Home</a>
             <span>>></span>
-            <a class="contact" asp-controller="Course" asp-action="Index">Courses</a>
+            <a class="navcourses" asp-controller="Course" asp-action="Index">Courses</a>
         </div>
         <div class="heading">
             <h1>@Model.Title</h1>
@@ -27,25 +27,46 @@
             </div>
         </div>
         <div class="course-grid">
-            @foreach (var course in Model.Courses)
-            {
-                <div class="course-item">                    
-                    <img src=@course.CoursePictureUrl />
-                    <h2>@course.Title</h2>
-                    <p class="text-s">By @course.Author</p>
-                    <p class="price">$ @course.Price</p>
-                    <div class="footer">
-                        <div class="time">
-                            <i class="fa-regular fa-clock"></i>
-                            <p class="text-s">@course.Hours hours</p>
+            <div class="course-item">
+                @foreach (var course in Model.Courses)
+                {
+                    <div class="course-box">
+                        <div class="image-and-best">
+                            <img class="main-image" src=@course.CoursePictureUrl />
+                            @if (course.IsBestSeller == true)
+                            {
+                                <article>
+                                    <img class="best" src="~/images/courseImages/bestSeller.svg" />
+                                </article>
+                            }
                         </div>
-                        <div class="likes">
-                            <i class="fa-light fa-thumbs-up"></i>
-                            <p class="text-s">@course.LikesInPercent% (@course.LikesInNumbers K)</p>
+                        <h2 class="h5">@course.Title</h2>
+                        <p class="text-s">By @course.Author</p>
+                        <div class="price-and-discount">
+                            @if (course.DiscountPrice != null)
+                            {
+                                <p class="discount">$@course.DiscountPrice</p>
+                                <p class="price-crossed">$@course.Price</p>
+                            }
+                            else
+                            {
+                                <p class="price">$@course.Price</p>
+                            }
+                        </div>
+                        <div class="end-line"></div>
+                        <div class="course-footer">
+                            <div class="time">
+                                <i class="fa-regular fa-clock"></i>
+                                <p class="text-s">@course.Hours Hours</p>
+                            </div>
+                            <div class="likes">
+                                <i class="fa-light fa-thumbs-up"></i>
+                                <p class="text-s">@String.Format("{0:0.##}%", course.LikesInPercent) @String.Format("({0:0.0#}K)", course.LikesInNumbers)</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-            }
+                }
+            </div>
         </div>
     </div>
 
