--- a/WebApp/wwwroot/css/scss/_sections.scss
+++ b/WebApp/wwwroot/css/scss/_sections.scss
@@ -13,4 +13,5 @@
 @import './sections/_account-security.scss';
 @import './sections/_not-found.scss';
 @import './sections/_account-saved-items.scss';
-@import './sections/_contact.scss'; 
+@import './sections/_contact.scss';
+@import './sections/_allCourses.scss';
